news item design changed & add webview

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginTop="20dp"
         android:text="Key Word"
-        android:fontFamily="@font/i_am_a_player"
+        android:fontFamily="@font/gangwon"
         android:textColor="@color/white"
         android:textSize="45dp"/>
 
