--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="gray">#F0F0F0</color>
+    <color name="grayButton">#f2f2f2</color>
+    <color name="pressGrayButton">#e2e2e2</color>
+    <color name="blue">#3F51B5</color>
 </resources>
