--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,8 @@
     android:id="@+id/keyword"
     android:layout_margin="10dp"
     android:padding="10dp"
-    android:background="@drawable/buttton_background"
+    android:elevation="20dp"
+    android:background="@drawable/news_background"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="keyword"
