--- a/app/src/main/res/layout/news.xml
+++ b/app/src/main/res/layout/news.xml
@@ -6,65 +6,82 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/news_background"
+    android:elevation="5dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:elevation="5dp">
+    app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/cover"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/keyword"
-            app:civ_border_color="@color/white"
-            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:maxLines="2"
+            android:text="제목"
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/title"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/cover"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="13dp"
+                android:src="@drawable/keyword"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="2dp" />
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:maxLines="1"
-                android:text="제목"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:orientation="vertical"
+                android:padding="10dp">
 
-            <TextView
-                android:id="@+id/sum"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="start"
-                android:maxLines="2"
-                android:text="부제목"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
+                <TextView
+                    android:id="@+id/sum"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="start"
+                    android:maxLines="3"
+                    android:text="부제목"
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
 
-            <TextView
-                android:id="@+id/press"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_gravity="start"
-                android:gravity="start"
-                android:hint="언론사"
-                android:maxLines="1"
-                android:textSize="15dp" />
+                <TextView
+                    android:id="@+id/press"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start"
+                    android:gravity="start"
+                    android:hint="언론사"
+                    android:maxLines="1"
+                    android:textSize="15dp" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
